--- a/docs/styles.css
+++ b/docs/styles.css
@@ -16,28 +16,32 @@
 
 body {
   margin: 0;
+  background-color: #333;
 }
 
 /* Disable ugly boxes around images in IE10 */
 a img{
   border: 0px;
 }
+a {
+  color: #bf360c;
+}
 
 ::-moz-selection {
-  background-color: #6ab344;
+  background-color: #E84F01;
   color: #fff;
 }
 
 ::selection {
-  background-color: #6ab344;
+  background-color: #E84F01;
   color: #fff;
 }
 
-.android-search-box .mdl-textfield__input {
+.stt-search-box .mdl-textfield__input {
   color: rgba(0, 0, 0, 0.87);
 }
 
-.android-header .mdl-menu__container {
+.stt-header .mdl-menu__container {
   z-index: 50;
   margin: 0 !important;
 }
@@ -47,7 +51,7 @@ a img{
   width: auto;
 }
 
-.android-fab {
+.stt-fab {
   position: absolute;
   right: 20%;
   bottom: -26px;
@@ -56,38 +60,38 @@ a img{
   color: black !important;
 }
 
-.android-mobile-title {
+.stt-mobile-title {
   display: none !important;
 }
 
 
-.android-logo-image {
+.stt-logo-image {
   height: 28px;
-  width: 140px;
+  width: 28px;
 }
 
 
-.android-header {
+.stt-header {
   overflow: visible;
-  background-color: white;
+  background-color: #bf360c;
 }
 
-  .android-header .material-icons {
-    color: #767777 !important;
+  .stt-header .material-icons {
+    color: white !important;
   }
 
-  .android-header .mdl-layout__drawer-button {
+  .stt-header .mdl-layout__drawer-button {
     background: transparent;
-    color: #767777;
+    color: white;
   }
 
-  .android-header .mdl-navigation__link {
-    color: #757575;
+  .stt-header .mdl-navigation__link {
+    color: white;
     font-weight: 700;
     font-size: 14px;
   }
 
-  .android-navigation-container {
+  .stt-navigation-container {
     /* Simple hack to make the overflow happen to the left instead... */
     direction: rtl;
     -webkit-order: 1;
@@ -98,7 +102,7 @@ a img{
         width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  .android-navigation {
+  .stt-navigation {
     /* ... and now make sure the content is actually LTR */
     direction: ltr;
     -webkit-justify-content: flex-end;
@@ -107,13 +111,13 @@ a img{
     width: 800px;
   }
 
-  .android-search-box.is-focused + .android-navigation-container {
+  .stt-search-box.is-focused + .stt-navigation-container {
     opacity: 0;
     width: 100px;
   }
 
 
-  .android-navigation .mdl-navigation__link {
+  .stt-navigation .mdl-navigation__link {
     display: inline-block;
     height: 60px;
     line-height: 68px;
@@ -121,11 +125,11 @@ a img{
     border-bottom: 4px solid transparent;
   }
 
-    .android-navigation .mdl-navigation__link:hover {
-      border-bottom: 4px solid #8bc34a;
+    .stt-navigation .mdl-navigation__link:hover {
+      border-bottom: 4px solid white;
     }
 
-  .android-search-box {
+  .stt-search-box {
     -webkit-order: 2;
         -ms-flex-order: 2;
             order: 2;
@@ -133,44 +137,44 @@ a img{
     margin-right: 16px;
   }
 
-  .android-more-button {
+  .stt-more-button {
     -webkit-order: 3;
         -ms-flex-order: 3;
             order: 3;
   }
 
 
-.android-drawer {
+.stt-drawer {
   border-right: none;
 }
 
-  .android-drawer-separator {
+  .stt-drawer-separator {
     height: 1px;
     background-color: #dcdcdc;
     margin: 8px 0;
   }
 
-  .android-drawer .mdl-navigation__link.mdl-navigation__link {
+  .stt-drawer .mdl-navigation__link.mdl-navigation__link {
     font-size: 14px;
     color: #757575;
   }
 
-  .android-drawer span.mdl-navigation__link.mdl-navigation__link {
+  .stt-drawer span.mdl-navigation__link.mdl-navigation__link {
     color: #8bc34a;
   }
 
-  .android-drawer .mdl-layout-title {
+  .stt-drawer .mdl-layout-title {
     position: relative;
-    background: #6ab344;
+    background: #E84F01;
     height: 160px;
   }
 
-    .android-drawer .android-logo-image {
+    .stt-drawer .stt-logo-image {
       position: absolute;
       bottom: 16px;
     }
 
-.android-be-together-section {
+.stt-be-together-section {
   position: relative;
   height: 800px;
   width: auto;
@@ -186,128 +190,128 @@ a img{
   font-weight: 500;
 }
 
-.android-slogan {
+.stt-slogan {
   font-size: 60px;
   padding-top: 160px;
 }
 
-.android-sub-slogan {
+.stt-sub-slogan {
   font-size: 21px;
   padding-top: 24px;
 }
 
-.android-create-character {
+.stt-create-character {
   font-size: 21px;
   padding-top: 400px;
 }
 
-  .android-create-character a {
+  .stt-create-character a {
     text-decoration: none;
     color: #767777;
     font-weight: 300;
   }
 
-.android-screen-section {
+.stt-screen-section {
   position: relative;
   padding-top: 60px;
   padding-bottom: 80px;
 }
 
-.android-screens {
+.stt-screens {
   text-align: right;
   width: 100%;
   white-space: nowrap;
   overflow-x: auto;
 }
 
-.android-screen {
+.stt-screen {
   text-align: center;
 }
 
-.android-screen .android-link {
+.stt-screen .stt-link {
   margin-top: 16px;
   display: block;
   z-index: 2;
 }
 
-.android-image-link {
+.stt-image-link {
   text-decoration: none;
 }
 
-.android-wear {
+.stt-wear {
   display: inline-block;
   width: 160px;
   margin-right: 32px;
 }
 
-  .android-wear .android-screen-image {
+  .stt-wear .stt-screen-image {
     width: 40%;
     z-index: 1;
   }
 
 
-.android-phone {
+.stt-phone {
   display: inline-block;
   width: 64px;
   margin-right: 48px;
 }
 
-  .android-phone .android-screen-image {
+  .stt-phone .stt-screen-image {
     width: 100%;
     z-index: 1;
   }
 
 
-.android-tablet {
+.stt-tablet {
   display: inline-block;
   width: 110px;
   margin-right: 64px;
 }
 
-  .android-tablet .android-screen-image {
+  .stt-tablet .stt-screen-image {
     width: 100%;
     z-index: 1;
   }
 
-  .android-tablet .android-link {
+  .stt-tablet .stt-link {
     display: block;
     z-index: 2;
   }
 
 
-.android-tv {
+.stt-tv {
   display: inline-block;
   width: 300px;
   margin-right: 80px;
 }
 
-  .android-tv .android-screen-image {
+  .stt-tv .stt-screen-image {
     width: 100%;
     z-index: 1;
   }
 
 
-.android-auto {
+.stt-auto {
   display: inline-block;
   width: 300px;
   overflow: hidden;
 }
 
-  .android-auto .android-screen-image {
+  .stt-auto .stt-screen-image {
     display: block;
     height: 300px;
     z-index: 1;
   }
 
 
-.android-wear-section {
+.stt-wear-section {
   position: relative;
   background: url('images/wear.png') center top no-repeat;
   background-size: cover;
   height: 800px;
 }
 
-.android-wear-band {
+.stt-wear-band {
   position: absolute;
   bottom: 0;
   width: 100%;
@@ -315,7 +319,7 @@ a img{
   background-color: #37474f;
 }
 
-.android-wear-band-text {
+.stt-wear-band-text {
   max-width: 800px;
   margin-left: 25%;
   padding: 24px;
@@ -323,158 +327,158 @@ a img{
   color: white;
 }
 
-  .android-wear-band-text p {
+  .stt-wear-band-text p {
     padding-top: 8px;
   }
 
-.android-link {
+.stt-link {
   text-decoration: none;
   color: #8bc34a !important;
 }
 
-  .android-link:hover {
+  .stt-link:hover {
     color: #7cb342 !important;
   }
 
-  .android-link .material-icons {
+  .stt-link .material-icons {
     position: relative;
     top: -1px;
     vertical-align: middle;
   }
 
-.android-alt-link {
+.stt-alt-link {
   text-decoration: none;
   color: #64ffda !important;
   font-size: 16px;
 }
 
-  .android-alt-link:hover {
+  .stt-alt-link:hover {
     color: #00bfa5 !important;
   }
 
-  .android-alt-link .material-icons {
+  .stt-alt-link .material-icons {
     position: relative;
     top: 6px;
   }
 
-.android-customized-section {
+.stt-customized-section {
   text-align: center;
 }
 
-.android-customized-section-text {
+.stt-customized-section-text {
   max-width: 500px;
   margin-left: auto;
   margin-right: auto;
   padding: 80px 16px 0 16px;
 }
 
-  .android-customized-section-text p {
+  .stt-customized-section-text p {
     padding-top: 16px;
   }
 
-.android-customized-section-image {
+.stt-customized-section-image {
   background: url('images/devices.jpg') center top no-repeat;
   background-size: cover;
   height: 400px;
 }
 
-.android-more-section {
+.stt-more-section {
   padding: 80px 0;
   max-width: 1044px;
   margin-left: auto;
   margin-right: auto;
 }
 
-  .android-more-section .android-section-title {
+  .stt-more-section .stt-section-title {
     margin-left: 12px;
     padding-bottom: 24px;
   }
-
-.android-card-container {
+  
+.stt-card-container {
 }
 
-  .android-card-container .mdl-card__media {
+  .stt-card-container .mdl-card__media {
     overflow: hidden;
     background: transparent;
   }
 
-    .android-card-container .mdl-card__media img {
+    .stt-card-container .mdl-card__media img {
       width: 100%;
     }
 
-  .android-card-container .mdl-card__title {
+  .stt-card-container .mdl-card__title {
     background: transparent;
     height: auto;
   }
 
-  .android-card-container .mdl-card__title-text {
+  .stt-card-container .mdl-card__title-text {
     color: black;
     height: auto;
   }
 
-  .android-card-container .mdl-card__supporting-text {
+  .stt-card-container .mdl-card__supporting-text {
     height: auto;
     color: black;
     padding-bottom: 56px;
   }
 
-  .android-card-container .mdl-card__actions {
+  .stt-card-container .mdl-card__actions {
     position: absolute;
     bottom: 0;
   }
 
-  .android-card-container .mdl-card__actions a {
+  .stt-card-container .mdl-card__actions a {
     border-top: none;
     font-size: 16px;
   }
 
-.android-footer {
+.stt-footer {
   background-color: #fafafa;
   position: relative;
 }
 
-  .android-footer a:hover {
+  .stt-footer a:hover {
     color: #8bc34a;
   }
 
-  .android-footer .mdl-mega-footer--top-section::after {
+  .stt-footer .mdl-mega-footer--top-section::after {
     border-bottom: none;
   }
 
-  .android-footer .mdl-mega-footer--middle-section::after {
+  .stt-footer .mdl-mega-footer--middle-section::after {
     border-bottom: none;
   }
 
-  .android-footer .mdl-mega-footer--bottom-section {
+  .stt-footer .mdl-mega-footer--bottom-section {
     position: relative;
   }
 
-  .android-footer .mdl-mega-footer--bottom-section a {
+  .stt-footer .mdl-mega-footer--bottom-section a {
     margin-right: 2em;
   }
 
-  .android-footer .mdl-mega-footer--right-section a .material-icons {
+  .stt-footer .mdl-mega-footer--right-section a .material-icons {
     position: relative;
     top: 6px;
   }
 
 
-.android-link-menu:hover {
+.stt-link-menu:hover {
   cursor: pointer;
 }
 
 
 /**** Mobile layout ****/
 @media (max-width: 900px) {
-  .android-navigation-container {
+  .stt-navigation-container {
     display: none;
   }
 
-  .android-title {
+  .stt-title {
     display: none !important;
   }
 
-  .android-mobile-title {
+  .stt-mobile-title {
     display: block !important;
     position: absolute;
     left: calc(50% - 70px);
@@ -485,58 +489,58 @@ a img{
   /* WebViews in iOS 9 break the "~" operator, and WebViews in OS X 10.10 break
      consecutive "+" operators in some cases. Therefore, we need to use both
      here to cover all the bases. */
-  .android.android-search-box.is-focused ~ .android-mobile-title,
-  .android-search-box.is-focused + .android-navigation-container + .android-mobile-title {
+  .android.stt-search-box.is-focused ~ .stt-mobile-title,
+  .stt-search-box.is-focused + .stt-navigation-container + .stt-mobile-title {
     opacity: 0;
   }
 
-  .android-more-button {
+  .stt-more-button {
     display: none;
   }
 
-  .android-search-box.is-focused {
+  .stt-search-box.is-focused {
     width: calc(100% - 48px);
   }
 
-  .android-search-box .mdl-textfield__expandable-holder {
+  .stt-search-box .mdl-textfield__expandable-holder {
     width: 100%;
   }
 
-  .android-be-together-section {
+  .stt-be-together-section {
     height: 350px;
   }
 
-  .android-slogan {
+  .stt-slogan {
     font-size: 26px;
     margin: 0 16px;
     padding-top: 24px;
   }
 
-  .android-sub-slogan {
+  .stt-sub-slogan {
     font-size: 16px;
     margin: 0 16px;
     padding-top: 8px;
   }
 
-  .android-create-character {
+  .stt-create-character {
     padding-top: 200px;
     font-size: 16px;
   }
 
-  .android-create-character img {
+  .stt-create-character img {
     height: 12px;
   }
 
-  .android-fab {
+  .stt-fab {
     display: none;
   }
 
-  .android-wear-band-text {
+  .stt-wear-band-text {
     margin-left: 0;
     padding: 16px;
   }
 
-  .android-footer .mdl-mega-footer--bottom-section {
+  .stt-footer .mdl-mega-footer--bottom-section {
     display: none;
   }
 }
