--- a/docs/styles.css
+++ b/docs/styles.css
@@ -498,6 +498,10 @@ a {
     transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
   }
 
+  .stt-mobile-time {
+    font-size: 84px;
+  }
+
   /* WebViews in iOS 9 break the "~" operator, and WebViews in OS X 10.10 break
      consecutive "+" operators in some cases. Therefore, we need to use both
      here to cover all the bases. */
