--- a/docs/styles.css
+++ b/docs/styles.css
@@ -414,6 +414,7 @@ a {
   }
 .st-matsuri a {
     color: #1a237e;
+    font-weight: bold;
   }
   .st-matsuri .mdl-mini-footer__link-list a {
     color: #1a237e;
