タイマー下部の余白が小さくなるように高さを下げた

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -589,6 +589,10 @@ a {
   .stt-footer .mdl-mega-footer--bottom-section {
     display: none;
   }
+
+  #eta_container .mdl-card {
+    min-height: 150px;
+  }
 }
 
 
